updated to 1.20 (with no bugs I hope)